--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
     <canvas id="unity-canvas" width=640 height=360 style="width: 640px; height: 360px; background: #231F20"></canvas>
-    <script src="Build/webgl.loader.js"></script>
+    <script src="Build/git_build.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -25,9 +25,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/webgl.data.br",
-        frameworkUrl: "Build/webgl.framework.js.br",
-        codeUrl: "Build/webgl.wasm.br",
+        dataUrl: "Build/git_build.data",
+        frameworkUrl: "Build/git_build.framework.js",
+        codeUrl: "Build/git_build.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "moneyproj",
